API improvment
